# halfmarathon

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  findings.md  plan.md  pyproject.toml  research.md
eval/: __init__.py  cost_projection.py  fixtures_override.py  footprint.py  harness.py  impls.py  profiles.py  report.py  scoring.py  test_cost_projection.py  test_footprint.py  test_profiles.py
eval/dimensions/: __init__.py  base.py  dim1_crash.py  dim2_multiday.py  dim3_context.py  dim4_memory.py  dim5_drift.py  dim6_hitl.py  dim7_stale.py  dim8_replay.py
implementations/claude_sdk/: __init__.py  agent_skill.md  run.py  smoke.py
implementations/langgraph/: __init__.py  run.py  smoke.py
implementations/letta/: __init__.py  run.py  smoke.py
implementations/temporal_pydantic/: __init__.py  activities.py  agent.py  run.py  smoke.py  workflow.py
infra/e2b/: README.md
infra/e2b/base/: Dockerfile  e2b.toml
infra/e2b/claude-sdk/: Dockerfile  e2b.toml  start.sh
infra/e2b/langgraph/: Dockerfile  e2b.toml  start.sh
infra/e2b/letta/: Dockerfile  e2b.toml  start.sh
infra/e2b/temporal-pydantic/: Dockerfile  e2b.toml  start.sh
results/: README.md  eval-matrix.md
task/: __init__.py  clock.py  clock_smoke.py  digests.py  event_log.py  llm.py  spec.md  test_clock.py  test_helpers.py  types.py
task/fixtures/: README.md  adversarial-events.json  memory-probes.json  mutations.json  sources.json  timeline.json  user.json
